# biblical-quotation-detector

./: .gitignore  CLAUDE.md  PROGRESS.md  PROMPT.md  README.md  index.html  main.py  pyproject.toml  test-report.md
data/: cross_references.json
data/ground_truth/: i_clement_quotations.json
docs/: phase3_mem0_setup.md  services.md
results/: report_20260122_150252.json  report_20260122_150252.md
results/i_clement/: DEBUGGING_GUIDE.md  IMPROVEMENT_NOTES.md  report_20260122_152130.json  report_20260122_152130.md  report_20260122_152324.json  report_20260122_152324.md  report_20260206_160805.json  report_20260206_160805.md  report_20260402_142615.json  report_20260402_142615.md
results/i_clement_fixed/: report_20260402_150318.json  report_20260402_150318.md
results/i_clement_fixed50/: report_20260402_150511.json
results/i_clement_lxx/: report_20260402_183128.json  report_20260402_183128.md
results/i_clement_lxx50/: report_20260402_183335.json  report_20260402_183335.md
results/i_clement_runA/: report_20260402_144335.json
results/i_clement_runB/: report_20260402_144545.json  report_20260402_144545.md
results/i_clement_runC/: report_20260402_144749.json  report_20260402_144749.md
scripts/: create_database.py  download_data.sh  evaluate.py  ingest_cntr.py  ingest_helloao.py  ingest_lxx.py  ingest_sbl_only.py  ingest_to_mem0.py  ingest_to_qdrant.py  process_greek.py  setup_database.sh  test_detector.py  test_mem0.py  test_patristic.py  test_qdrant_search.py  verify_mem0.py
src/: __init__.py  models.py
src/api/: __init__.py  (+2 more)
tests/: test_word_overlap.py
(+17 files in other folders)
