[project]
name = "biblical-quotation-detector"
version = "0.1.0"
description = "LLM-powered RAG agent for detecting biblical quotations in Koine Greek texts"
requires-python = ">=3.10"
dependencies = [
    "mem0ai>=0.1.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pandas>=2.2.0",
    "sqlite-utils>=3.37",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "cltk>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
